--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
   "scripts": {
     "test": "jest --ci --silent",
     "build": "tsc",
-    "watch": "tsc -w",
-    "prepublish": "tsc"
+    "watch": "tsc -w"
   },
   "keywords": [],
   "author": "Juan Camilo Guarín P",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^21.1.4",
+    "aws-sdk": "^2.201.0",
     "jest": "^21.2.1",
     "ts-jest": "^21.1.3",
     "tslint": "^5.8.0",
     "tslint-config-airbnb": "^5.3.0",
     "typescript": "^2.5.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "assert": "^1.4.1",
+    "moment": "^2.20.1",
+    "promises-all": "^1.0.0"
+  },
   "jest": {
     "roots": [
       "<rootDir>/src",
@@ -50,5 +54,8 @@
   "bugs": {
     "url": "https://github.com/owsas/typescript-module-template/issues"
   },
-  "homepage": "https://github.com/owsas/typescript-module-template#readme"
+  "homepage": "https://github.com/owsas/typescript-module-template#readme",
+  "peerDependencies": {
+    "aws-sdk": "^2.201.0"
+  }
 }
