--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "lib": [
       "es2015",
-      "dom"
+      "esnext",
     ],
     "outDir": "out",
     "declaration": true,
