--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest --ci --silent",
     "build": "tsc -p tsconfig.json",
     "watch": "tsc -w",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "deploy": "npm version patch && git push origin master --tags && npm publish --access public"
   },
   "keywords": [],
   "author": "Juan Camilo Guarín P",
